--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-* {
-    font-family: 'Maven Pro', sans-serif;
-}
-
 body {
     font-size: 1.1rem;
 }
@@ -12,4 +8,117 @@ p {
 
 footer ul li .fab {
     font-size: 1.2rem;
+}
+
+.page-header.page-header-small {
+    min-height: 80vh;
+}
+
+/* COMMON */
+.relative {
+    position: relative;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.opaque {
+    object-fit: cover;
+    opacity: 0.1;
+}
+
+.page-header:before {
+    background-color: transparent
+}
+
+.no-margin {
+    margin: 0;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.section {
+    background-color: transparent;
+    color: rgba(0, 0, 0, 0.7)
+}
+
+.white-bg {
+    background-color: #fff;
+}
+
+.page-header-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.backdrop {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: auto;
+}
+
+.white-text {
+    color: rgba(0, 0, 0, 0.7);
+}
+
+/** SPECIFIC CSS */
+
+.logo--content {
+    height: 400px;
+    width: auto;
+}
+
+.about-us {
+    padding-top: 100px;
+}
+
+.nav-logo {
+    height: 30px;
+    width: auto;
+}
+
+.about-us__content {
+    max-width: 400px;
+}
+
+.vm__content {
+    padding: 100px 0;
+    max-width: 500px;
+}
+
+.vision-mission {
+    padding-top: 0;
+}
+
+.bg-cyan {
+    background-color: rgba(6, 118, 137, 0.9);
+}
+
+.flex-1 {
+    flex: 1;
+}
+
+.core-values {
+    padding: 100px 0;
+}
+
+.core-values__text {
+    flex: 1;
+    padding: 0 30px;
+    text-align: justify;
 }
